# QImageWidget

./: QImageWidget.py  README.md  __init__.py  pyproject.toml
QImageWidget/: QImageWidget.py  QImageWidgetPs.py  __init__.py
QImageWidget/QImageWidget.egg-info/: PKG-INFO  SOURCES.txt
