[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QImageWidget"
version = "1.0.5"  # Increment this version
description = "PyQt5/PySide2 widget for displaying images"
authors = [{ name = "Render666", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
[tool.setuptools.packages.find]
where = ["QImageWidget"]

[project.urls]
"Homepage" = "https://github.com/RedEnder666/QImageWidget"
